# py-package-demo

./: LICENSE  README.md  pyproject.toml
tests/: README.md  conftest.py  pytest.ini  report.html  result.txt  test01.py  test02.py  test_01.py  test_02.py  test_03.py  test_a.py  test_app.py  test_assert1.py  test_b.py  test_canshu1.py  test_class.py  test_doc.py  test_dur.py  test_expectation.py  test_f1.py  test_fix.py  test_fix1.py  test_fix2.py  test_fixt.py  test_fixtclass.py  test_fixture1.py  test_fixture11.py  test_fixture12.py  test_fixture2.py  test_fixture3.py  test_fixture4.py  test_fixture5.py  test_fixture6.py  test_fixture_params.py  test_https.py  test_ids.py  test_mark.py  test_ordering.py  test_s.py  test_sample.py  (+4 more)
