[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_dkhubs"
version = "1.0.1"
authors = [
  { name="dkhubs", email="dkhubs@163.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dkhubs/py-package-demo"
Issues = "https://github.com/dkhubs/py-package-demo/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
  "--import-mode=importlib",
]